Добавлен API для редактирования/скрытия/реактивации/удаления объявления арендодателем
